@@ -1,5 +1,8 @@
 [b]Version 0.6.0rc5[/b]:
 
+(2008-04-20)
+ * Added a preferences dialog for the playlist.
+
 (2008-04-19)
  * Don't get info about the files added automatically by the GUI to the 
    playlist (usually it's the file to play, so it's a waste of time).
